--- a/Win32Project2/Win32Project2/Win32Project2.vcxproj
+++ b/Win32Project2/Win32Project2/Win32Project2.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{80A2BD44-9AE7-43AB-8097-FC350079BD5A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Win32Project2</RootNamespace>
+    <ProjectName>Practica1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
