--- a/RumbleController/RumbleController_2010.vcxproj.filters
+++ b/RumbleController/RumbleController_2010.vcxproj.filters
@@ -17,6 +17,8 @@
   <ItemGroup>
     <ClCompile Include="RumbleController.cpp" />
     <ClCompile Include="HIDBOX.cpp" />
+    <ClCompile Include="HID.cpp" />
+    <ClCompile Include="AppAbs.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HID.h" />
