--- a/RumbleController/RumbleController_2010.vcxproj
+++ b/RumbleController/RumbleController_2010.vcxproj
@@ -377,6 +377,8 @@
   <ItemGroup>
     <ClCompile Include="HIDBOX.cpp" />
     <ClCompile Include="RumbleController.cpp" />
+    <ClCompile Include="HID.cpp" />
+    <ClCompile Include="AppAbs.cpp" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
